--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -13,6 +13,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/">Inicio</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/restringido.html">Usuarios Restringidos</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
