Añadiendo busqueda en playlist

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -11,10 +11,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Inicio</a>
+                        <a class="nav-link" href="/inicio.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/restringido.html">Usuarios Restringidos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/playlist.html">Gestión Playlist</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
