Añadiendo vista de videos, aún sin completar

--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -14,7 +14,10 @@
                         <a class="nav-link" href="/inicio.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/restringido.html">Usuarios Restringidos</a>
+                        <a class="nav-link" href="/usuarioRestringido.html">Usuarios Restringidos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/video.html">Gestión Video</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/playlist.html">Gestión Playlist</a>
