--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -22,10 +22,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/playlist.html">Gestión Playlist</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/restringido.html">Gestión Usuarios</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <span class="nav-link">Bienvenido, <span id="user-name"></span></span>
+                        <span class="nav-link">Bienvenido</span>
                     </li>
                     <li class="nav-item">
                         <button class="btn btn-outline-danger" onclick="logoutUsuario()">Cerrar Sesión</button>
