--- a/layouts/layout.html
+++ b/layouts/layout.html
@@ -22,6 +22,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/playlist.html">Gestión Playlist</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/restringido.html">Gestión Usuarios</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
